--- a/css/adminBar.css
+++ b/css/adminBar.css
@@ -2416,9 +2416,6 @@ body.admin-bar #wpadminbar .noticon {
 }
 #wpadminbar {
   height: 65px;
-  -webkit-box-shadow: 5px 0px 30px rgba(0, 0, 0, 0.25), 5px 0px 10px rgba(0, 0, 0, 0.22);
-  -moz-box-shadow: 5px 0px 30px rgba(0, 0, 0, 0.25), 5px 0px 10px rgba(0, 0, 0, 0.22);
-  box-shadow: 5px 0px 30px rgba(0, 0, 0, 0.25), 5px 0px 10px rgba(0, 0, 0, 0.22);
   /* Admin Bar: my account */
 }
 #wpadminbar .ab-icon,
@@ -2428,8 +2425,8 @@ body.admin-bar #wpadminbar .noticon {
 }
 #wpadminbar > #wp-toolbar > #wp-admin-bar-root-default li#wp-admin-bar-wp-logo .ab-icon {
   background-image: url('../images/logo_horiz.png') !important;
-  background-size: 80%;
-  background-position: center;
+  background-size: 60%;
+  background-position: 25px;
   background-repeat: no-repeat;
 }
 #wpadminbar .quicklinks li#wp-admin-bar-my-account.with-avatar > a img {
@@ -2471,7 +2468,8 @@ body.admin-bar #wpadminbar .noticon {
   padding-right: 20px;
 }
 #wpadminbar li#wp-admin-bar-wp-logo {
-  margin-right: 20px!important;
+  margin-right: 0 !important;
+  width: 250px;
 }
 @media only screen and (max-width: 782px) {
   #wpadminbar li#wp-admin-bar-wp-logo {
@@ -2479,7 +2477,7 @@ body.admin-bar #wpadminbar .noticon {
   }
 }
 #wpadminbar li#wp-admin-bar-wp-logo > .ab-item {
-  padding: 0;
+  padding: 0 !important;
 }
 #wpadminbar li#wp-admin-bar-wp-logo > .ab-item .ab-icon {
   width: 250px;
@@ -2541,6 +2539,7 @@ body.folded #wpadminbar li#wp-admin-bar-wp-logo > .ab-item .ab-icon:before {
 }
 #wpadminbar li.screenLink {
   float: right;
+  display: none;
 }
 #wpadminbar li.screenLink .ab-item:before {
   font-family: "fontAwesome" !important;
@@ -2563,6 +2562,9 @@ body.folded #wpadminbar li#wp-admin-bar-wp-logo > .ab-item .ab-icon:before {
 }
 #wpadminbar.openBar {
   height: 65px;
+}
+.ab-item {
+  padding: 0 20px !important;
 }
 @media screen and (max-width: 782px) {
   .aquilaFront #aquilaAdminbarIcon {
