--- a/css/login.less
+++ b/css/login.less
@@ -7,7 +7,9 @@ body.login {
 	.sans;
 	#login {
 		width: 100%;
-		padding: 0;
+		padding: 30px;
+		box-sizing: border-box;
+
 		.va;
 		&:before {
 			.icoAquila;
@@ -93,7 +95,6 @@ body.login {
 				&:hover{
 				}
 				&:focus{
-					width: 100%;
 				}
 				&#aiowps-captcha-answer {
 					width: auto;
