button styling fix, no delay on mouseover in post table

--- a/css/table.less
+++ b/css/table.less
@@ -295,7 +295,7 @@ select {
 }
 
 .wp-core-ui .button, body.wp-admin .button, body.wp-admin .is-button {
-  height: 35px !important;
+  height: 35px;
   border-radius: 2px;
   box-shadow: none !important;
   text-shadow: none;
