--- a/css/adminBar.less
+++ b/css/adminBar.less
@@ -81,6 +81,7 @@ body.admin-bar {
 .folded #wpadminbar {
 	&>#wp-toolbar>#wp-admin-bar-root-default li#wp-admin-bar-wp-logo .ab-icon {
 		background-image: url('../images/logo_round.png') !important;
+		background-position: center;
 	}
 }
 
@@ -137,7 +138,6 @@ body.admin-bar {
 	}
 	li#wp-admin-bar-wp-logo {
 		margin-right: 0 !important;
-		width: 250px;
 		body.aquilaFront & {
 			//.dNI;
 		}
