--- a/css/table.less
+++ b/css/table.less
@@ -160,6 +160,21 @@ a.page-title-action {
 
 }
 
+.subsubsub {
+
+  > span, > li {
+
+    a {
+      background: transparent !important;
+      border: 1px solid #d0d0d0;
+
+      &.current {
+        background: #e0e0e0 !important;
+      }
+    }
+  }
+}
+
 table tbody .row-actions, .subsubsub {
   clear: both;
 
@@ -177,8 +192,7 @@ table tbody .row-actions, .subsubsub {
       color: black;
       padding: 4px 15px;
       background-color: #eee;
-      text-transform: uppercase;
-      font-weight: 700;
+      font-weight: normal;
       display: inline-block;
       box-sizing: border-box;
       white-space: nowrap !important;
@@ -291,7 +305,10 @@ select {
 .tablenav .actions .button {
   padding: 10px 22.5px !important;
   line-height: initial;
-  height: 35px !important;
+  height: auto;
+  letter-spacing: 0;
+  text-transform: none;
+  font-weight: normal;
 }
 
 .wp-core-ui .button, body.wp-admin .button, body.wp-admin .is-button {
@@ -300,8 +317,7 @@ select {
   box-shadow: none !important;
   text-shadow: none;
   border: none;
-  font-weight: bold !important;
-  text-transform: uppercase;
+  font-weight: bold;
   font-size: 13px;
   line-height: 2.6;
 }
@@ -592,9 +608,10 @@ table.publish-channel-column tbody td {
 
   &:before {
     font-family: dashicons;
-    font-size: 30px;
+    font-size: 25px;
     position: absolute;
     line-height: 0.5;
+    top: 5px;
   }
 
   &.published-app:before {
@@ -659,6 +676,11 @@ span.tablenav-paging-text {
   width: auto;
   padding: 0;
   margin-left: 0.5em;
+}
+
+.column-comments .comment-count-approved, .column-comments .comment-count-no-comments, .column-response .comment-count-approved, .column-response .comment-count-no-comments {
+  font-size: 8px;
+  line-height: 17px;
 }
 
 @media (min-width: 782px) and (min-width: 960px) {
