--- a/css/table.less
+++ b/css/table.less
@@ -102,7 +102,7 @@ table, table.widefat {
       font-size: 15px;
       color: #aaa;
 
-      strong, .row-title, a {
+      strong, .row-title, a, button {
         font-size: 15px !important;
         color: #aaa;
         margin-bottom: 0;
@@ -187,7 +187,9 @@ table tbody .row-actions, .subsubsub {
     max-width: 100%;
     line-height: 1.5;
 
-    a {
+    a,
+    button,
+    button.button-link {
       border-radius: 2px;
       color: black;
       padding: 4px 15px;
@@ -200,6 +202,7 @@ table tbody .row-actions, .subsubsub {
       overflow: hidden;
       max-width: 100%;
       font-size: 13px;
+      line-height: 1.5;
 
       span {
         font-size: 13px;
