Fix quick edit button

--- a/css/table.less
+++ b/css/table.less
@@ -203,6 +203,7 @@ table tbody .row-actions, .subsubsub {
       max-width: 100%;
       font-size: 13px;
       line-height: 1.5;
+      vertical-align: middle;
 
       span {
         font-size: 13px;
