--- a/css/table.less
+++ b/css/table.less
@@ -55,7 +55,7 @@ table.tags {
 
     td.column-primary {
       strong {
-        font-size: 0 !important;
+
       }
     }
 
@@ -684,6 +684,10 @@ span.tablenav-paging-text {
 .column-comments .comment-count-approved, .column-comments .comment-count-no-comments, .column-response .comment-count-approved, .column-response .comment-count-no-comments {
   font-size: 8px;
   line-height: 17px;
+}
+
+.column-comments .post-com-count-approved {
+  margin-top: 0;
 }
 
 @media (min-width: 782px) and (min-width: 960px) {
