--- a/css/vars.less
+++ b/css/vars.less
@@ -19,7 +19,7 @@
 .fontAwesome { font-family: "fontAwesome"!important; }
 .menuFA { font-family: "fontAwesome" !important;font-size: 18px;line-height: 1.6; }
 //.serif { font-family: 'Raleway', serif; }
-.sans { font-family: 'Roboto', sans-serif!important; }
+.sans { font-family: 'Roboto', sans-serif; }
 .heading { font-family: 'Roboto', sans-serif; }
 .bgCov { background-size: cover; background-position: center center; background-repeat: repeat; }
 .icoAquila { font-family: 'Aquila' !important; content: "\a002"; }
