--- a/css/table.less
+++ b/css/table.less
@@ -280,7 +280,7 @@ select {
   background-position: right 1em center;
   border-radius: 2px;
   text-overflow: ellipsis;
-  height: 35px !important;
+  height: 35px;
   padding-right: 2.25em !important;
   -webkit-padding-end: 2.25em;
   padding-left: .75em !important;
