--- a/css/table.less
+++ b/css/table.less
@@ -299,6 +299,11 @@ select {
 
 .tablenav .actions select {
   margin-bottom: 4px;
+  height: 35px;
+}
+
+.media-frame.mode-grid .media-toolbar select {
+  height: 35px;
 }
 
 .tablenav {
