--- a/css/table.less
+++ b/css/table.less
@@ -89,6 +89,11 @@ table.tags {
         font-size: 15px !important;
       }
     }
+    tr {
+      td {
+        white-space: normal;
+      }
+    }
   }
 }
 
