fix check color on checkboxes in sidebar (refs #23918)

--- a/css/aquila.css
+++ b/css/aquila.css
@@ -3649,3 +3649,9 @@ body.wp-admin.is-fullscreen-mode .components-notice-list {
 #footer-thankyou {
   display: none;
 }
+div.editor-post-taxonomies__hierarchical-terms-choice input[type=checkbox]:checked:before {
+  color: #ffffff !important;
+}
+div.components-base-control__field input[type=checkbox]:checked:before {
+  color: #ffffff !important;
+}
