--- a/css/aquila.less
+++ b/css/aquila.less
@@ -1191,3 +1191,11 @@ body.wp-admin {
 	display: none;
 }
 
+div.editor-post-taxonomies__hierarchical-terms-choice input[type=checkbox]:checked:before {
+	color: #ffffff !important;
+}
+
+div.components-base-control__field input[type=checkbox]:checked:before {
+  color: #ffffff !important;
+}
+
