--- a/icons/style.css
+++ b/icons/style.css
@@ -1,15 +1,12 @@
 @font-face {
   font-family: 'Aquila';
-  src:  url('fonts/Aquila.eot?dnmeo0');
-  src:  url('fonts/Aquila.eot?dnmeo0#iefix') format('embedded-opentype'),
-    url('fonts/Aquila.ttf?dnmeo0') format('truetype'),
-    url('fonts/Aquila.woff?dnmeo0') format('woff'),
-    url('fonts/Aquila.svg?dnmeo0#Aquila') format('svg');
+  src: url('fonts/Aquila.eot?dnmeo0');
+  src: url('fonts/Aquila.eot?dnmeo0#iefix') format('embedded-opentype'), url('fonts/Aquila.ttf?dnmeo0') format('truetype'), url('fonts/Aquila.woff?dnmeo0') format('woff'), url('fonts/Aquila.svg?dnmeo0#Aquila') format('svg');
   font-weight: normal;
   font-style: normal;
 }
-
-[class^="aquila-"], [class*=" aquila-"] {
+[class^="aquila-"],
+[class*=" aquila-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'Aquila' !important;
   speak: none;
@@ -18,12 +15,10 @@
   font-variant: normal;
   text-transform: none;
   line-height: 1;
-
   /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
 .aquila-tools:before {
   content: "\e909";
 }
@@ -138,4 +133,3 @@
 .aquila-safari:before {
   content: "\eae9";
 }
-
