--- a/icons/styles.css
+++ b/icons/styles.css
@@ -1,36 +1,30 @@
 @font-face {
-    font-family: 'Aquila';
-    src:    url('fonts/Aquila.eot?mvknes');
-    src:    url('fonts/Aquila.eot?mvknes#iefix') format('embedded-opentype'),
-        url('fonts/Aquila.ttf?mvknes') format('truetype'),
-        url('fonts/Aquila.woff?mvknes') format('woff'),
-        url('fonts/Aquila.svg?mvknes#Aquila') format('svg');
-    font-weight: normal;
-    font-style: normal;
+  font-family: 'Aquila';
+  src: url('fonts/Aquila.eot?mvknes');
+  src: url('fonts/Aquila.eot?mvknes#iefix') format('embedded-opentype'), url('fonts/Aquila.ttf?mvknes') format('truetype'), url('fonts/Aquila.woff?mvknes') format('woff'), url('fonts/Aquila.svg?mvknes#Aquila') format('svg');
+  font-weight: normal;
+  font-style: normal;
 }
-
-[class^="aquila-"], [class*=" aquila-"] {
-    /* use !important to prevent issues with browser extensions that change fonts */
-    font-family: 'Aquila' !important;
-    speak: none;
-    font-style: normal;
-    font-weight: normal;
-    font-variant: normal;
-    text-transform: none;
-    line-height: 1;
-
-    /* Better Font Rendering =========== */
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+[class^="aquila-"],
+[class*=" aquila-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'Aquila' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
-
 .aquila-magento:before {
-    content: "\a003";
+  content: "\a003";
 }
 .aquila-mito:before {
-    content: "\a001";
+  content: "\a001";
 }
 .aquila-aquila:before {
-    content: "\a002";
+  content: "\a002";
 }
-
