--- a/css/adminBar.less
+++ b/css/adminBar.less
@@ -17,6 +17,15 @@ body.admin-bar {
 		#wp-admin-bar-search {
 			.dNI;
 		}
+
+		.screen-reader-shortcut {
+			position: absolute;
+			top: 50%;
+			right: 20px;
+			color: #FFF;
+			transform: translateY(-50%);
+		}
+
 		.noticon {
 	    font-family: "Noticons" !important;
 	    -webkit-font-smoothing: antialiased;
