logout button fix

--- a/css/adminBar.css
+++ b/css/adminBar.css
@@ -2353,7 +2353,8 @@ body.admin-bar #wpadminbar * {
 body.admin-bar #wpadminbar #wp-admin-bar-search {
   display: none!important;
 }
-body.admin-bar #wpadminbar .screen-reader-shortcut {
+body.admin-bar #wpadminbar .screen-reader-shortcut,
+body.admin-bar #wpadminbar .screen-reader-shortcut:focus {
   position: absolute;
   top: 50%;
   right: 20px;
