--- a/css/adminBar.less
+++ b/css/adminBar.less
@@ -18,7 +18,7 @@ body.admin-bar {
 			.dNI;
 		}
 
-		.screen-reader-shortcut {
+		.screen-reader-shortcut, .screen-reader-shortcut:focus {
 			position: absolute;
 			top: 50%;
 			right: 20px;
