logout button style fix

--- a/css/adminBar.less
+++ b/css/adminBar.less
@@ -22,8 +22,13 @@ body.admin-bar {
 			position: absolute;
 			top: 50%;
 			right: 20px;
+			left: auto;
 			color: #FFF;
 			transform: translateY(-50%);
+			padding: 0;
+			background: none;
+			font-weight: normal;
+			box-shadow: none;
 		}
 
 		.noticon {
