--- a/css/adminBar.css
+++ b/css/adminBar.css
@@ -2358,8 +2358,13 @@ body.admin-bar #wpadminbar .screen-reader-shortcut:focus {
   position: absolute;
   top: 50%;
   right: 20px;
+  left: auto;
   color: #FFF;
   transform: translateY(-50%);
+  padding: 0;
+  background: none;
+  font-weight: normal;
+  box-shadow: none;
 }
 body.admin-bar #wpadminbar .noticon {
   font-family: "Noticons" !important;
