--- a/css/adminBar.less
+++ b/css/adminBar.less
@@ -18,6 +18,10 @@ body.admin-bar {
 			.dNI;
 		}
 
+		#wp-admin-bar-top-secondary {
+			background: #141414;
+		}
+
 		.screen-reader-shortcut, .screen-reader-shortcut:focus {
 			position: absolute;
 			top: 50%;
