--- a/css/adminBar.less
+++ b/css/adminBar.less
@@ -22,6 +22,12 @@ body.admin-bar {
 			background: #141414;
 		}
 
+		#wp-admin-bar-screenOptions {
+			display: block;
+			background: #141414;
+			height: 65px;
+		}
+
 		.screen-reader-shortcut, .screen-reader-shortcut:focus {
 			position: absolute;
 			top: 50%;
