--- a/css/aquila.less
+++ b/css/aquila.less
@@ -1055,6 +1055,17 @@ ul#aquilaHelp {
 	}
 }
 
+// Screen options
+#screen-meta {
+	display: block;
+	margin: 0 35px;
+	box-shadow: none;
+
+	#screen-options-wrap {
+		box-shadow: none;
+	}
+}
+
 // wp5.0 and Gutenberg
 
 body.wp-admin {
