--- a/css/aquila.less
+++ b/css/aquila.less
@@ -1210,3 +1210,6 @@ div.components-base-control__field input[type=checkbox]:checked:before {
   color: #ffffff !important;
 }
 
+.editor-writing-flow {
+	margin-top: 20px;
+}
